syntax = "proto3";

package transfer;
option go_package = "./transfer";

import "github.com/txchat/dtalk/api/proto/message.proto";
import "github.com/txchat/dtalk/api/proto/chat.proto";

message TransferMessageReq {
  string from = 1;
  string target = 2;
  dtalk.api.proto.Channel channelType = 3;
  dtalk.api.proto.Chat body = 4;
}

message TransferMessageResp {}

message CheckMessageResendReq {
  string from = 1;
  string uuid = 2;
  int64 seq = 3;
  int64 mid = 4;
}

message CheckMessageResendResp { int64 mid = 1; }

service Transfer {
  rpc TransferMessage(TransferMessageReq) returns (TransferMessageResp);
  rpc CheckMessageResend(CheckMessageResendReq)
      returns (CheckMessageResendResp);
}
